# bigwork

./: .gitignore  CMakeLists.txt  README.md  game_config.example.ini  game_config.ini
.cursor/skills/roadside-stroll-architecture/: SKILL.md
assets/sprites/: enemy_visuals.json  player_sheet.json  player_sheet_role2.json
assets/sprites/boss/boss1/: boss_cat_sheet.json
assets/sprites/enemy/01.Slime/: slime_sheet.json
assets/sprites/enemy/02.BugBit/: bugbit_sheet.json
assets/sprites/enemy/03.Spookmoth/: spookmoth_sheet.json
assets/sprites/enemy/04.Pebblin/: pebblin_sheet.json
src/: main.cpp
src/application/: game_application.cpp  game_application.hpp  game_command.hpp  game_state.hpp  overlay_layout.cpp  overlay_layout.hpp  render_snapshot.hpp
src/domain/: boss_bullet_strip.hpp  boss_hp_spell_constants.hpp  boss_pattern_spawn.cpp  boss_pattern_spawn.hpp  bullet_faction.hpp  bullet_hit_policy.cpp  bullet_hit_policy.hpp  combat_entities.cpp  combat_entities.hpp  combat_events.hpp  combat_ports.hpp  enemy_archetype.hpp  enemy_behavior.cpp  enemy_behavior.hpp  enemy_bullet_sprite.hpp  enemy_engagement_constants.hpp  enemy_sprite_id.hpp  pickup_drop.hpp  pickup_drop_tuning.hpp  playfield.cpp  playfield.hpp  raw_input.hpp  score_state.cpp  score_state.hpp  screen_layout.hpp  seed.hpp  skill.cpp  skill.hpp  tile_base.cpp  tile_base.hpp  vec2.hpp  wave_combat_tuning.hpp  wave_runtime_config.hpp  world.cpp  world.hpp
src/domain/ports/: iaudit_sink.hpp  iclock.hpp  irandom.hpp  iterminal.hpp
src/infrastructure/: file_audit_sink.cpp  file_audit_sink.hpp  frame_timer.cpp  frame_timer.hpp  game_config.cpp  game_config.hpp  std_random.cpp  std_random.hpp  steady_clock.cpp  steady_clock.hpp  win32_console_terminal.cpp  win32_console_terminal.hpp  win32_keyboard.cpp  win32_keyboard.hpp
src/representation/: bg_music_controller.cpp  bg_music_controller.hpp  boss_bullet_frames.cpp  boss_bullet_frames.hpp  boss_cat_resources.cpp  boss_cat_resources.hpp  combat_vfx_particles.cpp  combat_vfx_particles.hpp  enemy_visual_resources.cpp  enemy_visual_resources.hpp  frame_composer.cpp  frame_composer.hpp  key_mapping.cpp  key_mapping.hpp  movement_particles.cpp  movement_particles.hpp  player_role2_resources.cpp  player_role2_resources.hpp  player_sprite_animator.cpp  player_sprite_animator.hpp  render_constants.hpp  sfml_game_window.cpp  sfml_game_window.hpp  sprite_sheet_config.cpp  sprite_sheet_config.hpp  theme_palette.cpp  theme_palette.hpp
tests/: CMakeLists.txt  game_config_test.cpp  playfield_test.cpp  score_state_test.cpp
tools/: build_enemy_atlases.py
